Feature/generation options (#224)
* remove parameter option from compiler and replace with AssignToMember. Upgrade lombok to support java 19.

Remove bundle packaging from runtime

* support pattern match switch dispatch

* java 8 compile fixes Runtime#version accessed via reflection

---------

Co-authored-by: greg <greg.h@vidarrcap.com>
Co-authored-by: command-line <gregphiggins@gmail.com>